idle-monitor: Make per-device monitor fallible

https://bugzilla.gnome.org/show_bug.cgi?id=696118